# pace-calculator

./: .env.example  .gitignore  Cargo.toml  build-be.sh  build-fe.sh  docker-compose.yml  readme.md
.github/workflows/: ci.yml
docker/: frontend.Dockerfile  frontend.ci.Dockerfile  server.Dockerfile  server.ci.Dockerfile
frontend/: .dockerignore  .env.example  .prettierrc.json  README.md  package.json  pnpm-lock.yaml
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: simple-modal.component.tsx
frontend/src/components/calculator/: calculator.component.tsx  calculator.container.tsx  calculator.module.css  calculator.validator.ts  types.ts
frontend/src/helpers/: number.utils.spec.ts  number.utils.ts  time.utils.spec.ts  time.utils.ts  types.ts  validators.ts
frontend/src/hooks/: send-calculation.hook.ts
frontend/src/util/: utils.ts
frontend/src/validator/: types.ts  validatable-types.enum.ts  validator.spec.ts  validator.ts  validators.spec.ts  validators.ts
migrations/2024-08-28-124924_calculations/: down.sql  up.sql
server/: .dockerignore  .env.example  .gitignore  Cargo.toml
server/migrations/2024-08-28-124924_calculations/: up.sql
server/src/: lib.rs  main.rs
server/src/calculation/: calculation_service.rs  calculator_service.rs  dto.rs  errors.rs  mod.rs  route_handlers.rs  service.rs
server/src/config/: env_config.rs
server/src/db/: connection_customizer.rs  database_service.rs  errors.rs  mod.rs
server/src/error/: api_error.rs  mod.rs
server/src/middleware/: api_key_middleware.rs
server/src/response/: api_response.rs
server/src/routes/: calculate.rs  root.rs
server/src/utils/: file_utils.rs
server/src/validation/: mod.rs  server_error.rs
src/: calculation_handlers.rs  lib.rs  main.rs  models.rs  schema.rs
src/calculation/: dto.rs  mod.rs  route_handlers.rs  service.rs
src/config/: env_config.rs
src/middleware/: api_key_middleware.rs
src/routes/: calculate.rs  mod.rs  root.rs
src/validation/: mod.rs  server_error.rs  valid_json_request.rs
