[package]
name = "pace-calculator"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
default-run = "pace-calculator"

[dependencies]
axum = { version = "0.7.5" }
diesel = { version = "2.2.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
tower = "0.5.0"
tracing-subscriber = "0.3.18"
log = "0.4.22"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
validator = { version = "0.18.1", features = ["derive"] }


[dependencies.uuid]
version = "1.10.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
